force-app/main/default/objects/Collection__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>