force-app/main/default/objects/Collection__c/fields/CollectionDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate__c</fullName>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>