force-app/main/default/objects/Collection__c/fields/EngagementLeader__c.field-meta.xml
<CustomField>
    <fullName>EngagementLeader__c</fullName>
    <label>Engagement Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>