force-app/main/default/objects/Collection__c/fields/TimeSheet__c.field-meta.xml
<CustomField>
    <fullName>TimeSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeSheet</label>
    <referenceTo>TimeSheet__c</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>